# http-server

./: .editorconfig  .gitignore  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  LICENSE-MIT  Makefile  README.md  SECURITY.md  Testing  config.toml  dhat-heap.json  rustfmt.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: feature-request.md  issue-report.md
.github/workflows/: bench.yml  build.yml  clippy.yml  dependabot-auto-approve.yml  dependabot-auto-merge.yml  dependabot.yml  draft-release.yml  fmt.yml  release.yml  test.yml  test_suites.yml  tests.yml  upload-artifacts.yml
.github/workflows/scripts/: upload-artifacts.js
assets/: logo.ai
benches/: file_explorer.rs
crates/file-explorer/: Cargo.toml  Makefile  README.md  tailwind.config.js
crates/file-explorer-core/: Cargo.toml
crates/file-explorer-core/src/: lib.rs
crates/file-explorer-core/src/fs/: file.rs
crates/file-explorer-plugin/: Cargo.toml  Makefile
crates/file-explorer-plugin/src/: lib.rs
crates/file-explorer-proto/: Cargo.toml
crates/file-explorer-proto/src/: lib.rs
crates/file-explorer-ui/: Cargo.toml  Makefile  Trunk.toml
crates/file-explorer-ui/src/: api.rs  lib.rs
crates/file-explorer-ui/src/api/: proto.rs
crates/file-explorer-ui/src/components/: mod.rs
crates/file-explorer-ui/src/components/action_bar/: mod.rs
crates/file-explorer-ui/src/components/atoms/: button.rs  mod.rs
crates/file-explorer-ui/src/components/atoms/icons/: download.rs  file.rs  folder.rs  house.rs  justfile.rs  markdown.rs  mod.rs
crates/file-explorer-ui/src/components/file_list/: download_button.rs  entry.rs  entry_icon.rs  mod.rs
crates/file-explorer-ui/src/components/file_upload/: mod.rs
crates/file-explorer-ui/src/components/icons/: download.rs  git.rs  mod.rs  toml.rs
crates/file-explorer-ui/src/components/molecules/: file_upload.rs  mod.rs
crates/file-explorer-ui/src/components/organisms/: action_bar.rs  mod.rs  navigation_bar.rs
crates/file-explorer-ui/src/components/pages/: explorer.rs
crates/file-explorer-ui/src/components/templates/file_list/: download_button.rs  entry.rs  entry_icon.rs  mod.rs
crates/file-explorer/src/: fs.rs  http.rs  lib.rs  utils.rs
crates/file-explorer/src/fs/: file.rs  mod.rs
crates/file-explorer/src/templater/: mod.rs
crates/hello-world-plugin/: Cargo.toml  Makefile
crates/hello-world-plugin/src/: lib.rs
crates/http-server/: Cargo.toml  Makefile
crates/http-server-plugin/: Cargo.toml
crates/http-server-plugin/src/: config.rs  lib.rs
crates/http-server/src/: cli.rs  config.rs  lib.rs  main.rs  plugin.rs  server.rs
crates/http-server/src/cli/: mod.rs
crates/http-server/src/cli/command/: mod.rs  start.rs
crates/http-server/src/handler/file_explorer/: mod.rs
crates/http-server/src/handler/file_explorer/core/fs/: directory.rs  mod.rs
crates/http-server/src/middleware/: mod.rs  monitoring.rs
crates/http-server/src/server/: mod.rs  plugin.rs
docs/: tls-cert.sh
e2e/helpers/: load.bash
example/: config.toml
fixtures/: cert.pem  config.toml
scripts/: bench.sh  test.sh  test_suite.sh
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  server.rs
src/addon/: cors.rs  logger.rs  mod.rs  proxy.rs
src/addon/compression/: gzip.rs
src/addon/file_server/: directory_entry.rs  file.rs  handler.rs  http_utils.rs  mod.rs  query_params.rs  scoped_file_system.rs
src/addon/file_server/template/: error.hbs  explorer.hbs
src/addon/logger/: log.rs  mod.rs  output_pattern.rs  pattern.rs
src/addon/logger/print/: datetime.rs  mod.rs  req_ip.rs  req_method.rs  req_uri.rs  res_delay.rs  res_status.rs
src/addon/static_file/: scoped_file_system.rs
src/cli/: app.rs  args.rs  argument.rs  cli.rs  mod.rs  validator.rs
src/cli/command/: mod.rs
src/config/: basic_auth.rs  compression.rs  config.rs  cors.rs  file.rs  logger.rs  logging.rs  mod.rs  proxy.rs  tls.rs
src/config/util/: tls.rs
src/extension/: file_server.rs  mod.rs
src/file-explorer-ui/: Cargo.toml  Makefile  Trunk.toml
src/file-explorer-ui/public/: index.html
src/file-explorer-ui/src/: lib.rs
src/file-explorer-ui/src/api/: mod.rs
src/file_explorer/: entry.rs  error.rs  explorer.rs  mod.rs
src/handler/: main_handler.rs  mod.rs
src/handler/file_explorer/: handler.rs  mod.rs
src/handler/static_fs/: handler.rs
src/http-server/: Cargo.toml  Makefile
src/http-server/src/: config.rs  main.rs  server.rs
src/http-server/src/cli/command/: mod.rs  start.rs
src/http-server/src/handler/: mod.rs
src/http-server/src/handler/file_explorer/: mod.rs  utils.rs
src/http-server/src/handler/file_explorer/core/: mod.rs
src/http-server/src/handler/file_explorer/core/fs/: file.rs  mod.rs
src/http-server/src/handler/file_server/: mod.rs
src/http-server/src/handler/file_server/service/: directory_entry.rs  file.rs  http_utils.rs  mod.rs  scoped_file_system.rs
src/http-server/src/handler/file_server/service/template/: error.hbs
src/http-server/src/handler/file_server/utils/: mod.rs  url_encode.rs
src/middleware/: basic_auth.rs  mod.rs
src/old/addon/: proxy.rs
src/old/server/: mod.rs
src/server/: etag.rs  handler.rs  http.rs  https.rs  middleware.rs  mod.rs  server.rs  service.rs
src/server/handler/: file_explorer.rs  file_server.rs  mod.rs  proxy.rs
src/server/header/: etag.rs  http_header.rs  mod.rs
src/server/middleware/: cors.rs  gzip.rs  logger.rs  make_cors_middleware.rs  make_logger_middleware.rs  mod.rs  with_cors_allow_all.rs
src/server/service/: file_explorer.rs  hello_world.rs  mod.rs  static_resource.rs
src/server/services/: mod.rs  proxy.rs
src/server/template/: directory_index.hbs  explorer.hbs
src/test/: basic_auth.rs  cors.rs  defacto.rs  gzip.rs  mod.rs
src/utils/: error.rs  fmt.rs  mod.rs  signal.rs  terminal.rs  url_encode.rs
test/: Cargo.toml  Makefile  basic.bats  basic_auth.bats
test/src/: lib.rs  smoke.rs
tests/: basic_auth.rs  cors.rs  defacto.rs  gzip.rs  mod.rs
tests/e2e/: basic.bats
tests/e2e/helpers/: assert.bash
(+24 files in other folders)
