[workspace]
members = [
    "crates/file-explorer",
    "crates/file-explorer-core",
    "crates/file-explorer-proto",
    "crates/file-explorer-ui",
    "crates/http-server",
    "crates/http-server-plugin",
]
default-members = ["crates/http-server"]
resolver = "1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1.83"
bytes = "1.7.1"
chrono = "0.4.38"
clap = "4.5.20"
futures = "0.3.31"
humansize = "2.1.3"
http = "1.1.0"
http-auth-basic = "0.3.3"
http-body-util = "0.1"
hyper = "1.4"
hyper-util = "0.1.9"
leptos = "0.6"
leptos_meta = "0.6"
leptos_router = "0.6"
leptos-use = "0.10"
libloading = "0.8.5"
mime_guess = "2.0.5"
percent-encoding = "2.3.1"
reqwest = "0.12.8"
rust-embed = "8.5.0"
rustc_version = "0.4.1"
serde = "1.0.210"
serde_json = "1.0.128"
tokio = "1.40"
tokio-util = "0.7.12"
toml = "0.8.19"
tower-http = "0.6.1"
tower = "0.5.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# Workspace Crates
file-explorer-core = { path = "crates/file-explorer-core" }
file-explorer-proto = { path = "crates/file-explorer-proto" }
file-explorer-ui = { path = "crates/file-explorer-ui" }
http-server-plugin = { path = "crates/http-server-plugin" }
