[package]
name = "http-server"
version = "1.0.0-draft+2"
authors = ["Esteban Borai <estebanborai@gmail.com>"]
edition = "2021"
description = "Simple and configurable command-line HTTP server"
repository = "https://github.com/http-server-rs/http-server"
categories = ["web-programming", "web-programming::http-server"]
keywords = ["configurable", "http", "server", "serve", "static"]
license = "MIT OR Apache-2.0"
readme = "README.md"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1.83"
bytes = "1.7.1"
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["env", "derive", "std"] }
dirs = "5.0.1"
futures = "0.3.31"
gloo = "0.11.0"
gloo-file = "0.3.0"
humansize = "2.1.3"
http = "1.1.0"
http-body-util = "0.1"
hyper = { version = "1.4", features = ["server"] }
hyper-util = { version = "0.1.9", features = ["full"] }
leptos = "0.6"
leptos_meta = "0.6"
leptos_router = "0.6"
leptos-use = "0.12"
libloading = "0.8.5"
local-ip-address = "0.6.3"
mime_guess = "2.0.5"
multer = "3.1.0"
percent-encoding = "2.3.1"
reqwest = "0.12.8"
rust-embed = "8.5.0"
rustc_version = "0.4.1"
serde = "1.0.210"
serde_json = "1.0.128"
tokio = { version = "1.40", features = ["fs", "rt-multi-thread", "signal", "macros"] }
tokio-util = "0.7.12"
toml = "0.8.19"
tower = { version = "0.5.1",  features = ["util"] }
tower-http = { version = "0.6.1", features = ["cors"] }
tower-layer = "0.3.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
web-sys = "0.3.70"
