[workspace]
members = [
    "crates/file-explorer-ui",
    "crates/http-server",
]
default-members = ["crates/http-server"]
resolver = "1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1.83"
bytes = "1.7.1"
chrono = "0.4.38"
clap = "4.5.31"
dirs = "5.0.1"
futures = "0.3.31"
gloo = "0.11.0"
gloo-file = "0.3.0"
humansize = "2.1.3"
http = "1.1.0"
http-body-util = "0.1"
hyper = "1.4"
hyper-util = "0.1.9"
leptos = "0.6"
leptos_meta = "0.6"
leptos_router = "0.6"
leptos-use = "0.10"
libloading = "0.8.5"
local-ip-address = "0.6.3"
mime_guess = "2.0.5"
multer = "3.1.0"
percent-encoding = "2.3.1"
reqwest = "0.12.8"
rust-embed = "8.5.0"
rustc_version = "0.4.1"
serde = "1.0.210"
serde_json = "1.0.128"
tokio = "1.40"
tokio-util = "0.7.12"
toml = "0.8.19"
tower = "0.5.1"
tower-http = "0.6.1"
tower-layer = "0.3.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
web-sys = "0.3.72"
