[package]
name = "file-explorer-ui"
version = "0.0.0"
edition = "2021"
authors = ["Esteban Borai <estebanborai@gmail.com>"]
publish = false
description = "File Explorer UI"

[lib]
name = "file_explorer_ui"
path = "src/lib.rs"

[[bin]]
name = "file-explorer-ui"
path = "src/bin/main.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
gloo = { workspace = true }
gloo-file = { workspace = true }
leptos =  { workspace = true, features = ["csr"] }
leptos_meta = { workspace = true, features = ["csr"] }
leptos_router = { workspace = true, features = ["csr"] }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
web-sys = { workspace = true, features = ["FileList", "HtmlInputElement"] }

[dev-dependencies]
web-sys = { workspace = true }

wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
