[package]
name = "file-explorer"
version = "0.0.0"
authors = ["Esteban Borai <estebanborai@gmail.com>"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
handlebars = { workspace = true }
http-body-util = { workspace = true }
humansize = { workspace = true }
hyper = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }

http-server-plugin = { workspace = true }
