[package]
name = "file-explorer"
version = "0.0.0"
authors = ["Esteban Borai <estebanborai@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
mime_guess = { workspace = true }
tokio = { workspace = true, features = ["fs", "rt-multi-thread", "signal", "macros"] }
