[package]
name = "http-server"
version = "0.9.0"
authors = ["Esteban Borai <estebanborai@gmail.com>"]
edition = "2021"
description = "Simple and configurable command-line HTTP server"
repository = "https://github.com/http-server-rs/http-server"
categories = ["web-programming", "web-programming::http-server"]
keywords = ["configurable", "http", "server", "serve", "static"]
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "http-server"
path = "src/main.rs"

[dependencies]
color-eyre = "0.6.2"
clap = { version = "4.2.7", features = ["derive"] }

# Workspace Dependencies
axum = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Local Dependencies
file-explorer = { path = "../file-explorer" }

[profile.release]
debug = 1

[profile.dev.package.backtrace]
opt-level = 1
