[package]
name = "http-server"
version = "1.0.0-draft+1"
authors = ["Esteban Borai <estebanborai@gmail.com>"]
edition = "2021"
description = "Simple and configurable command-line HTTP server"
repository = "https://github.com/http-server-rs/http-server"
categories = ["web-programming", "web-programming::http-server"]
keywords = ["configurable", "http", "server", "serve", "static"]
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true, features = ["env", "derive", "std"] }
http = { workspace = true }
http-auth-basic = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true, features = ["full"] }
libloading = { workspace = true }
local-ip-address = { workspace = true }
tokio = { workspace = true, features = ["fs", "rt-multi-thread", "signal", "macros"] }
tower-http = { workspace = true, features = ["cors"] }
tower = { workspace = true, features = ["util"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

http-server-plugin = { workspace = true }
