[package]
name = "http-server"
version = "1.0.0"
authors = ["Leo Borai <estebanborai@gmail.com>"]
edition = "2021"
description = "Simple and configurable command-line HTTP server"
repository = "https://github.com/http-server-rs/http-server"
categories = ["web-programming", "web-programming::http-server"]
keywords = ["configurable", "http", "server", "serve", "static"]
license = "MIT OR Apache-2.0"
readme = "../../README.md"
include = ["/ui", "/src/"]

[[bin]]
name = "http-server"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["env", "derive", "std"] }
dirs = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true, features = ["full"] }
libloading = { workspace = true }
local-ip-address = { workspace = true }
mime_guess = { workspace = true }
multer = { workspace = true }
rust-embed = { workspace = true }
percent-encoding = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs", "rt-multi-thread", "signal", "macros"] }
tokio-util = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
tower = { workspace = true, features = ["util"] }
tower-layer = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
