[package]
name = "http-server"
authors.workspace = true
categories.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
keywords.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "http-server"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["env", "derive", "std"] }
dirs = { workspace = true }
futures = { workspace = true }
handlebars = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
humansize = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true, features = ["full"] }
libloading = { workspace = true }
local-ip-address = { workspace = true }
mime_guess = { workspace = true }
multer = { workspace = true }
rust-embed = { workspace = true }
percent-encoding = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs", "rt-multi-thread", "signal", "macros"] }
tokio-util = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
tower = { workspace = true, features = ["util"] }
tower-layer = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
